Correct spacings in microblog comment form

--- a/resources/sass/components/microblog/_comment.scss
+++ b/resources/sass/components/microblog/_comment.scss
@@ -1,4 +1,3 @@
-
 // Comments block
 // -------------------------
 
@@ -8,7 +7,7 @@
   // One comment
   .media {
     border-top: 1px solid $gray-200;
-    padding: 10px 5px 6px 5px;
+    padding: 6px 5px;
     margin-top: 5px;
 
     &.not-read {
